--- a/Data/Percentage/PercentageSurface.html
+++ b/Data/Percentage/PercentageSurface.html
@@ -1,5 +1,5 @@
 
-<table style="border-collapse:collapse;" class=table_6815 border=1>
+<table style="border-collapse:collapse;" class=table_1910 border=1>
 <thead>
 <tr>
   <th id="tableHTML_header_1"> </th>
@@ -102,10 +102,10 @@
 <tr>
   <td id="tableHTML_rownames">12</td>
   <td id="tableHTML_column_1">Rafael Nadal</td>
-  <td id="tableHTML_column_2">473</td>
+  <td id="tableHTML_column_2">474</td>
   <td id="tableHTML_column_3">134</td>
-  <td id="tableHTML_column_4">607</td>
-  <td id="tableHTML_column_5">77.92</td>
+  <td id="tableHTML_column_4">608</td>
+  <td id="tableHTML_column_5">77.96</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">13</td>
@@ -453,6 +453,14 @@
 </tr>
 <tr>
   <td id="tableHTML_rownames">56</td>
+  <td id="tableHTML_column_1">Gael Monfils</td>
+  <td id="tableHTML_column_2">305</td>
+  <td id="tableHTML_column_3">159</td>
+  <td id="tableHTML_column_4">464</td>
+  <td id="tableHTML_column_5">65.73</td>
+</tr>
+<tr>
+  <td id="tableHTML_rownames">57</td>
   <td id="tableHTML_column_1">Marin Cilic</td>
   <td id="tableHTML_column_2">312</td>
   <td id="tableHTML_column_3">163</td>
@@ -460,7 +468,7 @@
   <td id="tableHTML_column_5">65.68</td>
 </tr>
 <tr>
-  <td id="tableHTML_rownames">57</td>
+  <td id="tableHTML_rownames">58</td>
   <td id="tableHTML_column_1">Sandy Mayer</td>
   <td id="tableHTML_column_2">111</td>
   <td id="tableHTML_column_3">58</td>
@@ -468,20 +476,12 @@
   <td id="tableHTML_column_5">65.68</td>
 </tr>
 <tr>
-  <td id="tableHTML_rownames">58</td>
+  <td id="tableHTML_rownames">59</td>
   <td id="tableHTML_column_1">Harold Solomon</td>
   <td id="tableHTML_column_2">155</td>
   <td id="tableHTML_column_3">81</td>
   <td id="tableHTML_column_4">236</td>
   <td id="tableHTML_column_5">65.67</td>
-</tr>
-<tr>
-  <td id="tableHTML_rownames">59</td>
-  <td id="tableHTML_column_1">Gael Monfils</td>
-  <td id="tableHTML_column_2">304</td>
-  <td id="tableHTML_column_3">159</td>
-  <td id="tableHTML_column_4">463</td>
-  <td id="tableHTML_column_5">65.65</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">60</td>
@@ -517,6 +517,14 @@
 </tr>
 <tr>
   <td id="tableHTML_rownames">64</td>
+  <td id="tableHTML_column_1">Nick Kyrgios</td>
+  <td id="tableHTML_column_2">109</td>
+  <td id="tableHTML_column_3">58</td>
+  <td id="tableHTML_column_4">167</td>
+  <td id="tableHTML_column_5">65.26</td>
+</tr>
+<tr>
+  <td id="tableHTML_rownames">65</td>
   <td id="tableHTML_column_1">Claude Ngoran</td>
   <td id="tableHTML_column_2">15</td>
   <td id="tableHTML_column_3">8</td>
@@ -524,7 +532,7 @@
   <td id="tableHTML_column_5">65.21</td>
 </tr>
 <tr>
-  <td id="tableHTML_rownames">65</td>
+  <td id="tableHTML_rownames">66</td>
   <td id="tableHTML_column_1">Eddie Dibbs</td>
   <td id="tableHTML_column_2">75</td>
   <td id="tableHTML_column_3">40</td>
@@ -532,7 +540,7 @@
   <td id="tableHTML_column_5">65.21</td>
 </tr>
 <tr>
-  <td id="tableHTML_rownames">66</td>
+  <td id="tableHTML_rownames">67</td>
   <td id="tableHTML_column_1">Febi Widhiyanto</td>
   <td id="tableHTML_column_2">15</td>
   <td id="tableHTML_column_3">8</td>
@@ -540,20 +548,12 @@
   <td id="tableHTML_column_5">65.21</td>
 </tr>
 <tr>
-  <td id="tableHTML_rownames">67</td>
+  <td id="tableHTML_rownames">68</td>
   <td id="tableHTML_column_1">Andres Gimeno</td>
   <td id="tableHTML_column_2">43</td>
   <td id="tableHTML_column_3">23</td>
   <td id="tableHTML_column_4">66</td>
   <td id="tableHTML_column_5">65.15</td>
-</tr>
-<tr>
-  <td id="tableHTML_rownames">68</td>
-  <td id="tableHTML_column_1">Nick Kyrgios</td>
-  <td id="tableHTML_column_2">108</td>
-  <td id="tableHTML_column_3">58</td>
-  <td id="tableHTML_column_4">166</td>
-  <td id="tableHTML_column_5">65.06</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">69</td>
@@ -654,10 +654,10 @@
 <tr>
   <td id="tableHTML_rownames">81</td>
   <td id="tableHTML_column_1">Alexander Zverev</td>
-  <td id="tableHTML_column_2">124</td>
+  <td id="tableHTML_column_2">125</td>
   <td id="tableHTML_column_3">71</td>
-  <td id="tableHTML_column_4">195</td>
-  <td id="tableHTML_column_5">63.58</td>
+  <td id="tableHTML_column_4">196</td>
+  <td id="tableHTML_column_5">63.77</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">82</td>
@@ -717,19 +717,19 @@
 </tr>
 <tr>
   <td id="tableHTML_rownames">89</td>
+  <td id="tableHTML_column_1">John Isner</td>
+  <td id="tableHTML_column_2">310</td>
+  <td id="tableHTML_column_3">184</td>
+  <td id="tableHTML_column_4">494</td>
+  <td id="tableHTML_column_5">62.75</td>
+</tr>
+<tr>
+  <td id="tableHTML_rownames">90</td>
   <td id="tableHTML_column_1">Amos Mansdorf</td>
   <td id="tableHTML_column_2">212</td>
   <td id="tableHTML_column_3">126</td>
   <td id="tableHTML_column_4">338</td>
   <td id="tableHTML_column_5">62.72</td>
-</tr>
-<tr>
-  <td id="tableHTML_rownames">90</td>
-  <td id="tableHTML_column_1">John Isner</td>
-  <td id="tableHTML_column_2">309</td>
-  <td id="tableHTML_column_3">184</td>
-  <td id="tableHTML_column_4">493</td>
-  <td id="tableHTML_column_5">62.67</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">91</td>
@@ -781,6 +781,14 @@
 </tr>
 <tr>
   <td id="tableHTML_rownames">97</td>
+  <td id="tableHTML_column_1">David Goffin</td>
+  <td id="tableHTML_column_2">176</td>
+  <td id="tableHTML_column_3">107</td>
+  <td id="tableHTML_column_4">283</td>
+  <td id="tableHTML_column_5">62.19</td>
+</tr>
+<tr>
+  <td id="tableHTML_rownames">98</td>
   <td id="tableHTML_column_1">Joachim Johansson</td>
   <td id="tableHTML_column_2">59</td>
   <td id="tableHTML_column_3">36</td>
@@ -788,7 +796,7 @@
   <td id="tableHTML_column_5">62.1</td>
 </tr>
 <tr>
-  <td id="tableHTML_rownames">98</td>
+  <td id="tableHTML_rownames">99</td>
   <td id="tableHTML_column_1">Richard Gasquet</td>
   <td id="tableHTML_column_2">316</td>
   <td id="tableHTML_column_3">193</td>
@@ -796,20 +804,12 @@
   <td id="tableHTML_column_5">62.08</td>
 </tr>
 <tr>
-  <td id="tableHTML_rownames">99</td>
-  <td id="tableHTML_column_1">Egor Gerasimov</td>
-  <td id="tableHTML_column_2">18</td>
-  <td id="tableHTML_column_3">11</td>
-  <td id="tableHTML_column_4">29</td>
-  <td id="tableHTML_column_5">62.06</td>
-</tr>
-<tr>
   <td id="tableHTML_rownames">100</td>
-  <td id="tableHTML_column_1">David Goffin</td>
-  <td id="tableHTML_column_2">175</td>
-  <td id="tableHTML_column_3">107</td>
-  <td id="tableHTML_column_4">282</td>
-  <td id="tableHTML_column_5">62.05</td>
+  <td id="tableHTML_column_1">Juan Pino</td>
+  <td id="tableHTML_column_2">13</td>
+  <td id="tableHTML_column_3">8</td>
+  <td id="tableHTML_column_4">21</td>
+  <td id="tableHTML_column_5">61.9</td>
 </tr>
 </tbody>
 </table>
