--- a/Test.html
+++ b/Test.html
@@ -1,133 +1,112 @@
 
-<table style="border-collapse:collapse;" class=table_2331 border=1>
+<table style="border-collapse:collapse;" class=table_9729 border=1>
 <thead>
 <tr>
   <th id="tableHTML_header_1"> </th>
-  <th id="tableHTML_header_2">tourney_name</th>
-  <th id="tableHTML_header_3">tourney_id</th>
-  <th id="tableHTML_header_4">winner_name</th>
-  <th id="tableHTML_header_5">games</th>
+  <th id="tableHTML_header_2">name</th>
+  <th id="tableHTML_header_3">wins</th>
 </tr>
 </thead>
 <tbody>
 <tr>
   <td id="tableHTML_rownames">1</td>
-  <td id="tableHTML_column_1">Australian Open</td>
-  <td id="tableHTML_column_2">2011</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">60</td>
+  <td id="tableHTML_column_1">Rafael Nadal</td>
+  <td id="tableHTML_column_2">5</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">2</td>
-  <td id="tableHTML_column_1">Australian Open</td>
-  <td id="tableHTML_column_2">2019</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">62</td>
+  <td id="tableHTML_column_1">Novak Djokovic</td>
+  <td id="tableHTML_column_2">5</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">3</td>
-  <td id="tableHTML_column_1">Australian Open</td>
-  <td id="tableHTML_column_2">2008</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">72</td>
+  <td id="tableHTML_column_1">Ken Rosewall</td>
+  <td id="tableHTML_column_2">4</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">4</td>
-  <td id="tableHTML_column_1">Roland Garros</td>
-  <td id="tableHTML_column_2">2016</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">73</td>
+  <td id="tableHTML_column_1">Rod Laver</td>
+  <td id="tableHTML_column_2">4</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">5</td>
-  <td id="tableHTML_column_1">US Open</td>
-  <td id="tableHTML_column_2">2011</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">74</td>
+  <td id="tableHTML_column_1">Roger Federer</td>
+  <td id="tableHTML_column_2">4</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">6</td>
-  <td id="tableHTML_column_1">US Open</td>
-  <td id="tableHTML_column_2">2018</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">76</td>
+  <td id="tableHTML_column_1">Andre Agassi</td>
+  <td id="tableHTML_column_2">2</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">7</td>
-  <td id="tableHTML_column_1">US Open</td>
-  <td id="tableHTML_column_2">2015</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">77</td>
+  <td id="tableHTML_column_1">Stan Wawrinka</td>
+  <td id="tableHTML_column_2">2</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">8</td>
-  <td id="tableHTML_column_1">Australian Open</td>
-  <td id="tableHTML_column_2">2012</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">81</td>
+  <td id="tableHTML_column_1">Andres Gimeno</td>
+  <td id="tableHTML_column_2">1</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">9</td>
-  <td id="tableHTML_column_1">Australian Open</td>
-  <td id="tableHTML_column_2">2016</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">86</td>
+  <td id="tableHTML_column_1">John Newcombe</td>
+  <td id="tableHTML_column_2">1</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">10</td>
-  <td id="tableHTML_column_1">Wimbledon</td>
-  <td id="tableHTML_column_2">2018</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">88</td>
+  <td id="tableHTML_column_1">Arthur Ashe</td>
+  <td id="tableHTML_column_2">1</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">11</td>
-  <td id="tableHTML_column_1">Wimbledon</td>
-  <td id="tableHTML_column_2">2011</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">89</td>
+  <td id="tableHTML_column_1">Jimmy Connors</td>
+  <td id="tableHTML_column_2">1</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">12</td>
-  <td id="tableHTML_column_1">Australian Open</td>
-  <td id="tableHTML_column_2">2020</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">89</td>
+  <td id="tableHTML_column_1">Andres Gomez</td>
+  <td id="tableHTML_column_2">1</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">13</td>
-  <td id="tableHTML_column_1">Australian Open</td>
-  <td id="tableHTML_column_2">2015</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">91</td>
+  <td id="tableHTML_column_1">Pete Sampras</td>
+  <td id="tableHTML_column_2">1</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">14</td>
-  <td id="tableHTML_column_1">Australian Open</td>
-  <td id="tableHTML_column_2">2013</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">96</td>
+  <td id="tableHTML_column_1">NA</td>
+  <td id="tableHTML_column_2">NA</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">15</td>
-  <td id="tableHTML_column_1">Wimbledon</td>
-  <td id="tableHTML_column_2">2019</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">98</td>
+  <td id="tableHTML_column_1">NA</td>
+  <td id="tableHTML_column_2">NA</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">16</td>
-  <td id="tableHTML_column_1">Wimbledon</td>
-  <td id="tableHTML_column_2">2015</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">100</td>
+  <td id="tableHTML_column_1">NA</td>
+  <td id="tableHTML_column_2">NA</td>
 </tr>
 <tr>
   <td id="tableHTML_rownames">17</td>
-  <td id="tableHTML_column_1">Wimbledon</td>
-  <td id="tableHTML_column_2">2014</td>
-  <td id="tableHTML_column_3">Novak Djokovic</td>
-  <td id="tableHTML_column_4">116</td>
+  <td id="tableHTML_column_1">NA</td>
+  <td id="tableHTML_column_2">NA</td>
+</tr>
+<tr>
+  <td id="tableHTML_rownames">18</td>
+  <td id="tableHTML_column_1">NA</td>
+  <td id="tableHTML_column_2">NA</td>
+</tr>
+<tr>
+  <td id="tableHTML_rownames">19</td>
+  <td id="tableHTML_column_1">NA</td>
+  <td id="tableHTML_column_2">NA</td>
+</tr>
+<tr>
+  <td id="tableHTML_rownames">20</td>
+  <td id="tableHTML_column_1">NA</td>
+  <td id="tableHTML_column_2">NA</td>
 </tr>
 </tbody>
 </table>
